--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -1279,11 +1279,13 @@ table a,
 		margin: 0 0 15px 0;
 	}
 	#pageintro article {
+		margin-left: 20px; /* issue #9 non fini  */
 		max-width: none;
 		text-align: left;
 	}
 	#pageintro .heading {
 		font-size: 2rem;
+
 	}
 	.sectiontitle {
 		max-width: none;
@@ -1327,4 +1329,3 @@ table a,
 		font-size: 1.6rem;
 	}
 }
-
